# MusicBrainzQt

./: .gitignore  CMakeLists.txt  CODE_CLEANUP_REPORT.md  CONTRIBUTING.md  NAMING_CONVENTIONS_AND_VARIABLES.md  README.md  README.zh-cn.md  musicbrainz-qt.pro
.github/prompts/: MusicBrainz Qt.prompt.md
.github/workflows/: build.yml
docs/: AI_CODE_CONTRIBUTIONS.md  API.md  ARCHITECTURE.md  CODE_QUALITY.md  DEVELOPMENT.md
examples/: extended_api_example.cpp
resources/: images.qrc  styles.qrc  translations.qrc  ui_templates.qrc
resources/styles/: main.qss
src/: main.cpp  mainwindow.cpp  mainwindow.h
src/api/: api_utils.cpp  api_utils.h  libmusicbrainzapi.cpp  libmusicbrainzapi.h  musicbrainz_response_handler.cpp  musicbrainz_response_handler.h  musicbrainz_utils.cpp  musicbrainz_utils.h  musicbrainzapi.cpp  musicbrainzapi.h  musicbrainzparser.cpp  musicbrainzparser.h  musicbrainztypes.h  network_manager.cpp  network_manager.h
src/core/: error_types.h  types.h
src/models/: resultitem.cpp  resultitem.h  resultitemmodel.cpp  resultitemmodel.h  resulttablemodel.cpp  resulttablemodel.h
src/services/: entitydetailmanager.cpp  entitydetailmanager.h  searchservice.cpp  searchservice.h
src/ui/: advancedsearchwidget.cpp  advancedsearchwidget.h  entitylistwidget.cpp  entitylistwidget.h  itemdetailtab.cpp  itemdetailtab.h  itemdetailtab_clean.cpp  searchresulttab.cpp  searchresulttab.h  settingsdialog.cpp  settingsdialog.h  ui_utils.cpp  widget_helpers.cpp  widget_helpers.h
src/utils/: config_manager.cpp  config_manager.h  logger.cpp  logger.h
tests/: CMakeLists.txt  tst_api.cpp  tst_models.cpp
translations/: musicbrainzqt_en.ts  musicbrainzqt_zh_CN.ts
ui/: advancedsearchwidget.ui  alias_item_template.ui  aliases_tab_template.ui  entitylistwidget.ui  info_item_template.ui  itemdetailtab.ui  mainwindow.ui  overview_tab_template.ui  searchresulttab.ui  settingsdialog.ui
